# Homework_OOP

./: #CMakeLists.txt#  .ccls  .gitignore  CMakeLists.txt  CMakeLists.txt.old  OOP_conspect.md
DZ_03/: task01.cpp  task01_with_OOP.cpp  task01_without_OOP.cpp
DZ_04/: task01_with_OOP.cpp  task01_without_OOP.cpp
DZ_05/fraction/: Fraction.cpp  Fraction.h
DZ_05/lift/: Lift.cpp  Lift.h  main.cpp
DZ_05/task01/: Lift.cpp  main.cpp
DZ_05/wallpaperCost/: Apartament.h  Room.h  WallpaperRoll.h  main.cpp
DZ_06/: Contact.cpp  Contact.h  main.cpp
DZ_07/: Apartament.cpp  Apartament.h  Building.cpp  Building.h  Human.cpp  Human.h  main.cpp
DZ_08/: main  main.cpp
DZ_09/: main.cpp
DZ_10/: main.cpp
DZ_11/: Englplus.cpp  englplus
DZ_12/: main.cpp  main_fixed_encoding.cpp
DZ_13/: main  main.cpp
DZ_14/: main  main.cpp
DZ_15/: main.cpp
DZ_17/: main.cpp
DZ_18/: main.cpp
DZ_19/: main.cpp
DZ_20/: examples.txt  expamples.txt  main.cpp
DZ_21/: main.cpp
DZ_22/: task01.cpp  task02.cpp
DZ_23/: main.cpp
DZ_24/: main.cpp
DZ_25/: main.cpp
DZ_26/: example_hb_shelest.txt  main.cpp
DZ_27/: task01_04.cpp  task05.cpp
DZ_28/: main.cpp
DZ_29/: main.cpp
Directory/: Directory.cpp  Directory.h  DirectoryMain.cpp  directory.txt
PAT_01/: Document.cpp  Document.h  DocumentFactory.cpp  DocumentFactory.h  DocumentIO.cpp  DocumentIO.h  Makefile  SessionManager.cpp  SessionManager.h  UserInputManager.cpp  UserInputManager.h  UserInterface.cpp  UserInterface.h  commands  greeting  greeting2  main.cpp
PAT_01/TextDocument/: TextDocument.cpp  TextDocument.h  (+7 more)
PAT_02/: DocumentFactory.cpp  DocumentIO.cpp  DocumentIO.h  Makefile  SessionManager.cpp  SessionManager.h  UserInputManager.cpp  UserInputManager.h  greeting  main.cpp  new
PAT_03/: Car.cpp  Car.h  Device.h  main.cpp
StudentGrades/: StudentGrades.sln
(+30 files in other folders)
